--- a/styles/styles.css
+++ b/styles/styles.css
@@ -351,14 +351,16 @@ p {
     text-transform: uppercase;
     line-height: 1.2em;
     margin-top: 0;
+    position: relative;
 }
 
 .section-number {
-    position: relative;
+    position: absolute;
     display: inline-block;
     vertical-align: middle;
     line-height: 1.3;
     color: #000000;
+    left: 0;
 }
 
 .section-number:after {
@@ -416,12 +418,14 @@ p {
     .section-title {
         font-size: 2.8rem;
         margin-bottom: 2rem;
+        padding-left: 3rem;
     }
 
     .section-number {
         font-size: .5em;
         padding-bottom: .5rem;
         margin-right: .9rem;
+        top: 0.6rem;
     }
 
     .section-number:after {
@@ -451,6 +455,7 @@ p {
     .section-title {
         font-size: 3.2rem;
         margin-bottom: 2rem;
+        padding-left: 3rem;
     }
 }
 
@@ -458,12 +463,15 @@ p {
     .section-number {
         font-size: 1.8rem;
         padding-bottom: .6rem;
-        margin-right: 1rem;
+        top: 1rem;
     }
 
     .section-number:after {
         height: .5rem;
         border-radius: .5rem;
+    }
+    .section-title{
+        padding-left: 4rem;
     }
 
     .section-title .caption {
