--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,11 +130,12 @@ p:last-child {
     .header-slogan {
         font-size: 6.4rem;
         max-width: 60rem;
-        margin-bottom: 28.5rem;
+        margin-bottom: 30rem;
+        line-height: 1.2;
     }
 
     .header-slogan-second-line {
-        margin-top: -1rem;
+        margin-top: 0.2rem;
         margin-left: 10.8rem;
     }
 }
@@ -275,7 +276,7 @@ p:last-child {
     }
 
     .header-logo {
-        margin-bottom: 16rem;
+        margin-bottom: 16.5rem;
     }
 
 }
@@ -339,6 +340,7 @@ p:last-child {
     display: inline-block;
     vertical-align: middle;
     line-height: 1.3;
+    font-weight: bold;
     color: #000000;
     left: 0;
 }
@@ -410,7 +412,6 @@ p:last-child {
         padding-bottom: .5rem;
         margin-right: .9rem;
         top: 0.6rem;
-        font-weight: bold;
     }
 
     .section-number:after {
@@ -425,14 +426,14 @@ p:last-child {
     }
 
     .section-heading {
-        padding-top: 3rem;
-        margin-bottom: 4.2rem;
+        padding-top: 7rem;
+        margin-bottom: 0.5rem;
     }
 
     .section {
         box-sizing: border-box;
         padding-top: 3rem;
-        padding-bottom: 3.6rem;
+        padding-bottom: 3.2rem;
         font-size: 1.6rem;
         line-height: 1.7;
     }
@@ -446,7 +447,7 @@ p:last-child {
 
     }
     .section-number{
-        top: 1rem;
+        top: 0.6rem;
     }
 }
 
@@ -539,7 +540,7 @@ p:last-child {
         margin-left: auto;
         margin-right: auto;
         background-image: url(../images/footballer_192.png);
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
         margin-top: 0.6rem;
     }
 }
